increase font size for lists inside admonitions

--- a/docs/assets/pdf-font.css
+++ b/docs/assets/pdf-font.css
@@ -40,7 +40,9 @@ body,
     line-height: 1.7;
   }
 
-  .admonition p {
+  .admonition p,
+  .admonition ol,
+  .admonition ul {
     font-size: 1.1rem;
   }
 
